Fix links not showing as underlined

--- a/site.css
+++ b/site.css
@@ -95,7 +95,6 @@ p {
 /* Links */
 a {
   color:#2099aa;
-  text-decoration:none;
   font-weight:bold;
   -webkit-transition:color 100ms;
      -moz-transition:color 100ms;
